--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,6 @@ install: |
 script:
   - crystal deps
   - crystal spec
+  - crystal examples/test.cr
+  - crystal examples/view_test.cr
+  - crystal examples/simple_application.cr
