--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,9 @@
+before_install: |
+  curl http://dist.crystal-lang.org/apt/setup.sh | sudo bash
+  sudo apt-get -q update
 install:
+  - sudo apt-get install crystal
+  - crystal deps
   - git clone https://github.com/manastech/crystal.git
   - cd crystal
   - make
