--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,14 @@ before_install: |
   curl http://dist.crystal-lang.org/apt/setup.sh | sudo bash
   sudo apt-get -q update
 install:
+  - sudo apt-get install libgmp3-dev crystal
+  - sudo sed -i -e 's/.*LIBRARY_PATH.*/export LIBRARY_PATH=\"$INSTALL_DIR\/embedded\/lib${LIBRARY_PATH:\+:$LIBRARY_PATH}\"/' /opt/crystal/bin/crystal
+  - curl "http://crystal-lang.s3.amazonaws.com/llvm/llvm-3.5.0-1-linux-x86_64.tar.gz" | tar xz -C /tmp
+  - curl "http://crystal-lang.s3.amazonaws.com/pcl/libpcl-1.12-1-linux-x86_64.tar.gz" | tar xz -C /tmp
+  - export LIBRARY_PATH=/opt/crystal/embedded/lib:/tmp/libpcl-1.12-1/lib
+  - export PATH=/tmp/llvm-3.5.0-1/bin:$PATH
+  - export CRYSTAL_CONFIG_VERSION=ci
+  - export CRYSTAL_CACHE_DIR=/tmp/crystal
   - sudo apt-get install crystal
   - crystal deps
   - git clone https://github.com/manastech/crystal.git
