--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,9 @@
 /doc/
 /examples/
 /.work/
+.shards
 
 
 # Libraries don't need dependency lock
 # Dependencies will be locked in application that uses them
 /.deps.lock
-
