Ignore vim swap files by git

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,10 @@
 # Libraries don't need dependency lock
 # Dependencies will be locked in application that uses them
 /.deps.lock
+
+
+# Vim swap files
+*.swp
+*.swn
+*.swo
+session.vis
